feat: generate playlists-list, edot-form, item, details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,14 @@
         <mat-toolbar color="primary">
             <mat-icon></mat-icon>
         </mat-toolbar>
+        <mat-list>
+            <mat-list-item routerLink="/music/search">
+                Music Search
+            </mat-list-item>
+            <mat-list-item routerLink="/playlists">
+                Playlists
+            </mat-list-item>
+        </mat-list>
         Sidenav content
     </mat-sidenav>
 
