feat: Layout for Playlists list, details, edit form, playlist list

--- a/src/app/playlists/components/playlist-details/playlist-details.component.html
+++ b/src/app/playlists/components/playlist-details/playlist-details.component.html
@@ -1,1 +1,16 @@
-<p>playlist-details works!</p>
+<mat-list>
+    <mat-list-item>
+        <span matLine>Name:</span>
+        <span matLine>My Playlist</span>
+    </mat-list-item>
+    <mat-list-item>
+        <span matLine>Public:</span>
+        <span matLine>Yes</span>
+    </mat-list-item>
+    <mat-list-item>
+        <span matLine>Description:</span>
+        <span matLine>My Playlist Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel fugiat mollitia beatae
+            et commodi aliquid nam eaque officia, obcaecati expedita.
+        </span>
+    </mat-list-item>
+</mat-list>
