--- a/src/app/playlists/playlists.component.html
+++ b/src/app/playlists/playlists.component.html
@@ -1,1 +1,12 @@
 <p>playlists works!</p>
+
+<div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="20px">
+    <div fxFlex="30">
+        <app-playlist-list></app-playlist-list>
+    </div>
+    <div fxFlex="70">
+        <app-playlist-details></app-playlist-details>
+        <app-playlist-edit-form></app-playlist-edit-form>
+
+    </div>
+</div>
