--- a/src/app/playlists/components/playlist-edit-form/playlist-edit-form.component.html
+++ b/src/app/playlists/components/playlist-edit-form/playlist-edit-form.component.html
@@ -1,1 +1,11 @@
-<p>playlist-edit-form works!</p>
+<mat-form-field>
+    <input matInput placeholder="Name">
+</mat-form-field>
+<!-- 
+<mat-form-field>
+    <mat-ckeckbox>Public:</mat-ckeckbox>
+</mat-form-field>
+
+<mat-form-field>
+    <textarea matInput placeholder="Description"></textarea>
+</mat-form-field> -->
