--- a/src/app/playlists/components/playlist-list/playlist-list.component.html
+++ b/src/app/playlists/components/playlist-list/playlist-list.component.html
@@ -1,1 +1,15 @@
-<p>playlist-list works!</p>
+<!-- mat-list>mat-list-item*3>span[matLine]{Text}+mat-divider -->
+<mat-list>
+    <mat-list-item>
+        <span matLine>Text</span>
+        <mat-divider></mat-divider>
+    </mat-list-item>
+    <mat-list-item>
+        <span matLine>Text</span>
+        <mat-divider></mat-divider>
+    </mat-list-item>
+    <mat-list-item>
+        <span matLine>Text</span>
+        <mat-divider></mat-divider>
+    </mat-list-item>
+</mat-list>
