--- a/src/app/playlists/components/playlist-edit-form/playlist-edit-form.component.html
+++ b/src/app/playlists/components/playlist-edit-form/playlist-edit-form.component.html
@@ -7,5 +7,5 @@
 </mat-form-field>
 
 <mat-form-field>
-    <textarea matInput placeholder="Description"></textarea>
+    <matInput matInput placeholder="Description"></matInput>
 </mat-form-field> -->
