--- a/src/app/playlists/playlists.component.html
+++ b/src/app/playlists/playlists.component.html
@@ -5,7 +5,16 @@
     <app-playlist-list></app-playlist-list>
   </div>
   <div fxFlex="50">
-    <app-playlist-details></app-playlist-details>
-    <app-playlist-edit-form></app-playlist-edit-form>
+    
+    <div *ngIf="mode === 'details'; then detailsRef; else editRef"></div>
+
+    <ng-template #detailsRef>
+      <app-playlist-details></app-playlist-details>
+      <button (click)="mode = 'edit'">Edit</button>
+    </ng-template>
+    <ng-template #editRef>
+      <app-playlist-edit-form></app-playlist-edit-form>
+      <button (click)="mode = 'details'">Details</button>
+    </ng-template>
   </div>
 </div>
