feat: mark selected item on click

--- a/src/app/playlists/components/playlist-edit-form/playlist-edit-form.component.html
+++ b/src/app/playlists/components/playlist-edit-form/playlist-edit-form.component.html
@@ -1,7 +1,8 @@
 <div fxLayout="column" fxLayoutAlign="stretch stretch" fxLayoutGap="20px">
 
-    <pre>{{ playlist | json }}</pre>
+    <!-- <pre>{{ playlist | json }}</pre> -->
   
+    <h1>{{counter}}</h1>
   
     <mat-form-field>
       <!-- <mat-label>Name:</mat-label> -->
