--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+mat-list-item.active {
+    background: #3F51B5;
+    color: #f5f5f5 !important;
+}
