--- a/src/app/playlists/playlists.component.html
+++ b/src/app/playlists/playlists.component.html
@@ -2,12 +2,16 @@
 
 <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="20px">
   <div fxFlex="30">
-    <app-playlist-list [items]="playlists"></app-playlist-list>
+    <app-playlist-list 
+    [items]="playlists"
+    (selectedIdChange)="selectItem($event)"
+    [selectedId]="selectedId"
+    ></app-playlist-list>
   </div>
   <div fxFlex="50">
     <div [ngSwitch]="mode">
       <div *ngSwitchCase="'details'">
-        <app-playlist-details [playlist]="selected"></app-playlist-details>
+        <app-playlist-details [playlist]="selected!"></app-playlist-details>
         <button (click)="mode = 'edit'">Edit</button>
       </div>
       <div *ngSwitchCase="'edit'">
