--- a/src/app/playlists/components/playlist-details/playlist-details.component.html
+++ b/src/app/playlists/components/playlist-details/playlist-details.component.html
@@ -31,3 +31,5 @@
     <span matLine>{{ playlist.description }}</span>
   </mat-list-item>
 </mat-list>
+
+<button mat-raised-button color="primary" (click)="canvelClicked()">Edit</button>
