--- a/src/app/playlists/components/playlist-edit-form/playlist-edit-form.component.html
+++ b/src/app/playlists/components/playlist-edit-form/playlist-edit-form.component.html
@@ -1,22 +1,25 @@
 <div fxLayout="column" fxLayoutAlign="stretch stretch" fxLayoutGap="20px">
+  <!-- <pre>{{ playlist | json }}</pre> -->
 
-    <!-- <pre>{{ playlist | json }}</pre> -->
-    
-    <mat-form-field>
-      <!-- <mat-label>Name:</mat-label> -->
-      <input matInput placeholder="Name" [(ngModel)]="playlist.name">
-      <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
-      <mat-hint>{{playlist.name.length}} / 170</mat-hint>
-    </mat-form-field>
-  
-    <div>
-      <mat-checkbox [(ngModel)]="playlist.public">Public</mat-checkbox>
-    </div>
-  
-    <mat-form-field>
-      <textarea matInput placeholder="Description"
-      [(ngModel)]="playlist.description"></textarea>
-    </mat-form-field>
-  
+  <mat-form-field>
+    <!-- <mat-label>Name:</mat-label> -->
+    <input matInput placeholder="Name" [(ngModel)]="playlist.name" />
+    <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
+    <mat-hint>{{ playlist.name.length }} / 170</mat-hint>
+  </mat-form-field>
+
+  <div>
+    <mat-checkbox [(ngModel)]="playlist.public">Public</mat-checkbox>
   </div>
-  
+
+  <mat-form-field>
+    <textarea
+      matInput
+      placeholder="Description"
+      [(ngModel)]="playlist.description"
+    ></textarea>
+  </mat-form-field>
+</div>
+
+<button mat-raised-button color="warn" (click)="cancelClicked()">Cancel</button>
+<button mat-raised-button color="primary" (click)="saveClicked()">Save</button>
