feat: onPush manual

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <mat-icon></mat-icon>
     </mat-toolbar>
     <mat-list>
-      <mat-list-item routerLink="/music/search">
+      <mat-list-item routerLink="/music">
         Music search
         <mat-divider></mat-divider>
       </mat-list-item>
