feat: music search module, search form, album card

--- a/src/app/music-search/music-search.component.html
+++ b/src/app/music-search/music-search.component.html
@@ -1,1 +1,9 @@
-<p>music-search works!</p>
+<div fxLayout="column" fxLayoutAlign="space-between stretch" fxLayoutGap="20px"  [style.padding.px]="10" fxFlexFill>
+    <div fxFlex="50%">
+      <app-search-form  fxFlex="100%"></app-search-form>
+    </div>
+    <div fxFlex="50%">
+      <app-search-results  fxFlex="100%"></app-search-results>
+    </div>
+  </div>
+  
